--- a/_teaching/2022-CS-355.md
+++ b/_teaching/2022-CS-355.md
@@ -3,7 +3,7 @@ title: "CS 355: Topics in Cryptography"
 collection: teaching
 type: "Graduate Course (Teacher)"
 permalink: https://crypto.stanford.edu/cs355/22sp/
-date: 2022
+date: 2022-04-01
 ---
 
 Stanford students have been behind some of the most important developments in modern cryptography, including Diffie-Hellman key exchange, Merkle trees, ElGamal encryption, and fully homomorphic encryption. With this history in mind, CS355 will cover many of the foundational techniques that you will need to get started with crypto research and to go on to solve the field’s great open problems. It will also introduce you to the joy of cryptography research and give you a taste of the lastest developments in cryptography. By the time you finish this course, you should understand the most important cryptographic tools and be able to use them.
