--- a/_teaching/2021-CS-255.md
+++ b/_teaching/2021-CS-255.md
@@ -3,7 +3,7 @@ title: "CS255: Introduction to Cryptography"
 collection: teaching
 type: "Undergraduate course (Head TA)"
 permalink: https://crypto.stanford.edu/~dabo/courses/cs255_winter21/
-date: 2021
+date: 2021-01-01
 ---
 
 Cryptography is an indispensable tool for protecting information in computer systems. This course explains the inner workings of cryptographic primitives and how to use them correctly. 
